--- a/index.html
+++ b/index.html
@@ -5,52 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Man</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="https://www.apache.org/favicons/favicon-194x194.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="https://www.apache.org/favicons/favicon-194x194.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
-    <h1>Image Search App</h1>
-    <form action="">
-      <input type="text" placeholder="Search for images" id="search-input" class="search-input"/>
-      <button id="search-button">Search</button>
-    </form>
+    <main>
+      <h1>Image Search App</h1>
+      <form action="">
+        <input
+          type="text"
+          placeholder="Search for images"
+          id="search-input"
+          class="search-input"
+        />
+        <button id="search-button">Search</button>
+      </form>
 
-    <div class="search-results">
-      <div class="search-result">
-        <img
-          src="https://images.unsplash.com/photo-1698734419287-2fc55dcf344f?auto=format&fit=crop&q=80&w=1170&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="halloween beach"
-        />
-        <a
-          href="https://unsplash.com/photos/a-carved-pumpkin-sitting-on-top-of-a-sandy-beach-ry_kKMiGK-M"
-          target="_blank"
-          >halloween beach</a
-        >
+      <div class="search-results">
+        <div class="search-result">
+          <img
+            src="https://images.unsplash.com/photo-1698734419287-2fc55dcf344f?auto=format&fit=crop&q=80&w=1170&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="halloween beach"
+          />
+          <a
+            href="https://unsplash.com/photos/a-carved-pumpkin-sitting-on-top-of-a-sandy-beach-ry_kKMiGK-M"
+            target="_blank"
+            >halloween beach</a
+          >
+        </div>
+        <div class="search-result">
+          <img
+            src="https://images.unsplash.com/photo-1695653422536-d1e9d449ce7b?auto=format&fit=crop&q=80&w=1170&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="a girl with grap"
+          />
+          <a
+            href="https://unsplash.com/photos/a-person-riding-a-scooter-on-a-city-street-PTHUQDWap6Q"
+            target="_blank"
+            >a girl with grap</a
+          >
+        </div>
+        <div class="search-result">
+          <img
+            src="https://images.unsplash.com/photo-1695765189584-046b776809cb?auto=format&fit=crop&q=80&w=1172&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="natural house"
+          />
+          <a
+            href="https://unsplash.com/photos/a-house-with-a-grass-roof-in-a-field-AQg8WVyL8Xc"
+            target="_blank"
+            >natural house</a
+          >
+        </div>
       </div>
-      <div class="search-result">
-        <img
-          src="https://images.unsplash.com/photo-1695653422536-d1e9d449ce7b?auto=format&fit=crop&q=80&w=1170&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="a girl with grap"
-        />
-        <a
-          href="https://unsplash.com/photos/a-person-riding-a-scooter-on-a-city-street-PTHUQDWap6Q"
-          target="_blank"
-          >a girl with grap</a
-        >
-      </div>
-      <div class="search-result">
-        <img
-          src="https://images.unsplash.com/photo-1695765189584-046b776809cb?auto=format&fit=crop&q=80&w=1172&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="natural house"
-        />
-        <a
-          href="https://unsplash.com/photos/a-house-with-a-grass-roof-in-a-field-AQg8WVyL8Xc"
-          target="_blank"
-          >natural house</a
-        >
-      </div>
-    </div>
-    <button id="show-more-button">Show more</button>
+      <button id="show-more-button">Show more</button>
+    </main>
 
+    <footer>
+      &copy; Copyright 2023.Created By
+      <a style="margin-left: 3px;" href="https://github.com/kishor-selvam" target="_blank">Kishor</a>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
